<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.dokarkivavlevering</groupId>
	<artifactId>dokarkivavlevering</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>dokarkivavlevering</name>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.8</version>
	</parent>

	<modules>
		<module>app</module>
        <module>arkivverket-schemas</module>
    </modules>

	<properties>
		<camel.version>3.20.2</camel.version>
		<java.version>17</java.version>
		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<oracle.version>19.17.0.0</oracle.version>
		<simpleflatmapper.version>8.2.3</simpleflatmapper.version>
		<Saxon-HE.version>10.3</Saxon-HE.version>
		<jaxb2-commons.version>0.6.5</jaxb2-commons.version>
		<commons-io.version>2.11.0</commons-io.version>
		<rxjava.version>3.1.6</rxjava.version>
		<verapdf.version>1.22.2</verapdf.version>
		<aspose-pdf.version>23.1</aspose-pdf.version>
		<jaxb-runtime-glassfish.version>2.3.7</jaxb-runtime-glassfish.version>
	</properties>

	<repositories>
		<repository>
			<id>AsposeJavaAPI</id>
			<name>Aspose Java API</name>
			<url>https://repository.aspose.com/repo/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<!--pdf validator-->
			<dependency>
				<groupId>org.verapdf</groupId>
				<artifactId>validation-model</artifactId>
				<version>${verapdf.version}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.activation</groupId>
						<artifactId>javax.activation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!--/pdf validator-->
			<!-- https://mvnrepository.com/artifact/org.jvnet.jaxb2.maven2/maven-jaxb2-plugin -->
			<dependency>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>${jaxb2-commons.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkivavlevering</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokarkivavlevering</groupId>
				<artifactId>arkivverket-schemas</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-dependencies</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.sf.saxon</groupId>
				<artifactId>Saxon-HE</artifactId>
				<version>${Saxon-HE.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.simpleflatmapper</groupId>
				<artifactId>sfm-springjdbc</artifactId>
				<version>${simpleflatmapper.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava3</groupId>
				<artifactId>rxjava</artifactId>
				<version>${rxjava.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-pdf</artifactId>
				<version>${aspose-pdf.version}</version>
			</dependency>
				<dependency>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-runtime</artifactId>
					<version>${jaxb-runtime-glassfish.version}</version>
				</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</build>

</project>